# examples-python-images-production

./: .gitignore  LICENSE  README.md  check-image-updates.sh
image-pdm/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
image-pdm/my_app/templates/: index.html
image-pip/: .dockerignore  Dockerfile  README.md  docker-compose.yml  requirements-dev.txt  requirements.txt
image-poetry/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
image-poetry/docker/: start-gunicorn.sh
image-uv/: Dockerfile  README.md  docker-compose.yml
