[tool.poetry]
name = "my-app"
version = "1.0.0"
description = "An example Flask application for demonstrating best-practices when writing production images for Python apps."
authors = ["Jan Smitka <jan.smitka@lynt.cz>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.3"
mysqlclient = "^2.2.4"
gunicorn = "^22.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
